--- a/css/index.css
+++ b/css/index.css
@@ -1,29 +1,51 @@
-body {
-    background-color: lightblue;
-    margin: auto;
-    
+html {
+    font-family: sans-serif;
 }
 
-header {
-    border: 1px solid red;
+body {
+    background-color: rgba(100, 0, 8, 0.750);
+    margin: auto;
+
 }
+
+
+/* Header Styles */
+
+header {
+    background-color: black;
+    color: rgb(255, 255, 255);
+    border: 1px solid white;
+    height: 50px;
+}
+
+
+/* Navigation Styles */
 
 nav {
     display: inline-block;
+    border: 1px dashed white;
 }
 
-nav ul{
+nav ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-nav li{
-    display: inline-block;
+nav li {
+    display: inline;
+    padding: 0px 5px;
+    text-align: center;
+    margin: 0px 5px;
 }
 
-nav a{
+nav a {
     text-decoration: none;
     color: inherit;
 }
+
+
+/* Footer Styles */
 
 footer {
     border: 1px solid red;
@@ -34,12 +56,6 @@ footer {
     margin: 10px;
 }
 
-.toc {
-    height: auto;
-    width: 400px;
-    border: 1px solid blue;
-}
-
 .images {
     display: inline-block;
     height: auto;
@@ -48,10 +64,10 @@ footer {
     border: 1px solid black;
 }
 
-.images img{
+.images img {
     height: 100px;
     width: 100px;
-    
+
 }
 
 .sectionsArea {
@@ -74,4 +90,12 @@ footer {
     flex-basis: 500px;
     border: 1px solid black;
     flex-grow: 3;
+}
+
+.known {
+    color: lightblue;
+}
+
+.working {
+    color: lightgreen;
 }
